[package]
name = "flint"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.39.0", features = ["ssl", "cmake-build"] }
tokio = { version = "1.43.1", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.8"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
futures = "0.3.31"
reqwest = "0.13.0"
config = "0.15.0"
serde_derive = "1.0.215"
serde = { version = "1.0", features = ["derive"] }
reqwest-retry = "0.9.0"
reqwest-middleware = "0.5.0"

[dev-dependencies]
httpmock = "0.8.0"
